--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,8 @@
     "test:ci": "cross-env NODE_ENV=development jest --ci --logHeapUsage",
     "b:test": "NODE_ENV=test bunx jest --watch",
     "b:build": "NODE_ENV=production bun --bun vite build",
-    "b:dev": "NODE_ENV=development bunx vite"
+    "b:dev": "NODE_ENV=development bunx vite",
+    "build-vite": "vite build --base=/ -c vite.config.ts"
   },
   "repository": {
     "type": "git",
